added handlebars functions, and further refined file heiarchy

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,11 +10,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/dashboard">Dashboard</a></li>
-            {{#if loggedIn}}
-            <li><a href="/logout">Logout</a></li>
-            {{else}}
-            <li><a href="/login">Login</a></li>
-            {{/if}}
+            {{{navMenu loggedIn}}}
         </ul>
     </nav>
 
