--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <div class="row">
     <div class="col-md-6">
         <h2>Login</h2>
@@ -40,3 +42,5 @@
 </div>
 
 <script src="./js/login.js"></script>
+
+</html>
