got handlebars working, fixed main.handlebars and properly using it

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,18 +2,23 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Tech Blog</title>
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
 
 <body>
-    {{> navbar}}
+    <header>
+        {{> navbar}}
+    </header>
+    <main>
+        {{{ body }}}
+    </main>
 
-
-    <!-- Include Handlebars library -->
-    <script src="handlebars.js"></script>
-
-    <!-- Your Handlebars template goes here -->
-    <script id="card-template" type="text/x-handlebars-template"></script>
+    {{#if logged_in}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
 </body>
 
 </html>
